[ML-Config-Adding-And-Testing] Changed JDK version and added titanic prediction for testing