@@ -1,16 +1,14 @@
 plugins {
+	id 'org.springframework.boot' version '2.6.7'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'org.springframework.boot' version '3.3.3'
-	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'com.cube.manage'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	sourceCompatibility = '1.8'
 }
 
 configurations {
@@ -22,7 +20,6 @@ configurations {
 repositories {
 	mavenCentral()
 }
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -37,10 +34,19 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
-	compileOnly 'org.apache.spark:spark-mllib_2.13:3.5.2'
+	implementation 'org.apache.spark:spark-mllib_2.13:3.5.2'
+	implementation 'org.apache.spark:spark-sql_2.13:3.5.2'
+	implementation 'org.scala-lang:scala-library:2.13.14'
+	implementation 'org.apache.maven.plugins:maven-surefire-plugin:3.4.0'
+	implementation 'org.springframework.boot:spring-boot-maven-plugin:3.3.3'
 
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+test {
+	jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
+}
+
